[project]
name = "py-useful-snippet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.118.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "sqlmodel>=0.0.25",
    "streamlit>=1.50.0",
    "typer>=0.19.2",
    "uvicorn>=0.37.0",
]
